--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.3",
     "jest": "^27.5.1",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
