--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "@material-tailwind/react": "^1.4.2",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
@@ -16,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "jest": "^27.5.1",
     "jquery": "^3.6.4",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
