--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "postcss": "^8.4.21",
     "prefixer": "^0.0.3",
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+}
 }
